error.txt
   Compiling prlents v0.1.0 (/home/diego/mystuff/Coding/prlents)
error[E0432]: unresolved import `handle_file`
 --> src/relationship.rs:7:5
  |
7 | use handle_file::handle_file;
  |     ^^^^^^^^^^^ help: a similar path exists: `crate::handle_file`
  |
  = note: `use` statements changed in Rust 2018; read more at <https://doc.rust-lang.org/edition-guide/rust-2018/module-system/path-clarity.html>

warning: unused import: `std::io`
 --> src/common.rs:5:5
  |
5 | use std::io;
  |     ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::fs`
 --> src/relationship.rs:1:5
  |
1 | use std::fs;
  |     ^^^^^^^

warning: unused import: `std::path::Path`
 --> src/relationship.rs:2:5
  |
2 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused imports: `read_tags_from_json` and `save_tags_to_json`
 --> src/relationship.rs:6:49
  |
6 | use crate::common::{TagType, EntsTag, TagsFile, read_tags_from_json, save_tags_to_json};
  |                                                 ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

warning: unused imports: `EntsTag` and `TagsFile`
  --> src/main.rs:13:30
   |
13 | use crate::common::{TagType, EntsTag, TagsFile, read_tags_from_json, save_tags_to_json};
   |                              ^^^^^^^  ^^^^^^^^

error[E0063]: missing field `files` in initializer of `TagsFile`
   --> src/parser.rs:223:8
    |
223 |     Ok(TagsFile {
    |        ^^^^^^^^ missing `files`

error[E0308]: mismatched types
  --> src/handle_file.rs:14:37
   |
14 | pub fn handle_file(file_path: &str, &mut jf: TagsFile) -> Result<u64, Box<dyn Error>> {
   |                                     ^^^^^^^  -------- expected due to this
   |                                     |
   |                                     expected `TagsFile`, found `&mut _`
   |
   = note:         expected struct `TagsFile`
           found mutable reference `&mut _`
note: to declare a mutable parameter use: `mut jf`
  --> src/handle_file.rs:14:37
   |
14 | pub fn handle_file(file_path: &str, &mut jf: TagsFile) -> Result<u64, Box<dyn Error>> {
   |                                     ^^^^^^^
help: to take parameter `jf` by reference, move `&mut` to the type
   |
14 - pub fn handle_file(file_path: &str, &mut jf: TagsFile) -> Result<u64, Box<dyn Error>> {
14 + pub fn handle_file(file_path: &str, jf: &mut TagsFile) -> Result<u64, Box<dyn Error>> {
   |

Some errors have detailed explanations: E0063, E0308, E0432.
For more information about an error, try `rustc --explain E0063`.
warning: `prlents` (bin "prlents") generated 5 warnings
error: could not compile `prlents` (bin "prlents") due to 3 previous errors; 5 warnings emitted
